--- a/test-output/Default suite/classes.html
+++ b/test-output/Default suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>ValidateDataFilteredorNot</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>verifyPriceTextUpdate</td>
 <td>&nbsp;</td></tr>
 <tr>
