--- a/test-output/Default suite/methods-alphabetical.html
+++ b/test-output/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9788f3">  <td>19/09/11 20:22:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.getSearchDetails(java.lang.String, java.lang.String, java.lang.String)">getSearchDetails</td> 
-  <td>main@1390835631</td>   <td></td> </tr>
-<tr bgcolor="b871a5">  <td>19/09/11 20:22:32</td>   <td>-18648</td> <td>&nbsp;</td><td title="&gt;&gt;com.PhpTravelsHotelApplication.BaseClass.BaseClass.setup()">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1390835631</td>   <td></td> </tr>
-<tr bgcolor="9788f3">  <td>19/09/11 20:22:56</td>   <td>5646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.verifyPriceTextUpdate()">verifyPriceTextUpdate</td> 
-  <td>main@1390835631</td>   <td></td> </tr>
+<tr bgcolor="9788f3">  <td>19/09/12 15:57:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.ValidateDataFilteredorNot()">ValidateDataFilteredorNot</td> 
+  <td>main@889729797</td>   <td></td> </tr>
+<tr bgcolor="9788f3">  <td>19/09/12 15:57:09</td>   <td>-18133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.getSearchDetails(java.lang.String, java.lang.String)">getSearchDetails</td> 
+  <td>main@889729797</td>   <td></td> </tr>
+<tr bgcolor="b871a5">  <td>19/09/12 15:56:50</td>   <td>-37489</td> <td>&nbsp;</td><td title="&gt;&gt;com.PhpTravelsHotelApplication.BaseClass.BaseClass.setup()">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889729797</td>   <td></td> </tr>
+<tr bgcolor="9788f3">  <td>19/09/12 15:57:27</td>   <td>-199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.verifyPriceTextUpdate()">verifyPriceTextUpdate</td> 
+  <td>main@889729797</td>   <td></td> </tr>
 </table>
