--- a/test-output/Suite/methods.html
+++ b/test-output/Suite/methods.html
@@ -1,2 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="b871a5">  <td>19/09/13 20:10:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;com.PhpTravelsHotelApplication.BaseClass.BaseClass.setup()">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1436664465</td>   <td></td> </tr>
+<tr bgcolor="9788f3">  <td>19/09/13 20:10:48</td>   <td>18346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.getSearchDetails(java.lang.String, java.lang.String)">getSearchDetails</td> 
+  <td>main@1436664465</td>   <td></td> </tr>
+<tr bgcolor="9788f3">  <td>19/09/13 20:10:55</td>   <td>24998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.verifyPriceTextUpdate()">verifyPriceTextUpdate</td> 
+  <td>main@1436664465</td>   <td></td> </tr>
+<tr bgcolor="9788f3">  <td>19/09/13 20:10:55</td>   <td>25137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="com.PhpTravelsHotelApplication.TestScript.SearchAndFilter.ValidateDataFilteredorNot()">ValidateDataFilteredorNot</td> 
+  <td>main@1436664465</td>   <td></td> </tr>
+<tr bgcolor="b871a5">  <td>19/09/13 20:10:56</td>   <td>26135</td> <td>&nbsp;</td><td title="&lt;&lt;com.PhpTravelsHotelApplication.BaseClass.BaseClass.close()">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1436664465</td>   <td></td> </tr>
 </table>
