--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ab0da">  <td>19/09/16 20:05:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@37e547da]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707976812</td>   <td></td> </tr>
-<tr bgcolor="8675e1">  <td>19/09/16 20:05:52</td>   <td>22480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.getSearchDetails(java.lang.String, java.lang.String)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@37e547da]">getSearchDetails</td> 
-  <td>main@707976812</td>   <td></td> </tr>
-<tr bgcolor="8675e1">  <td>19/09/16 20:05:59</td>   <td>29013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.verifyPriceTextUpdate()[pri:1, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@37e547da]">verifyPriceTextUpdate</td> 
-  <td>main@707976812</td>   <td></td> </tr>
-<tr bgcolor="8675e1">  <td>19/09/16 20:06:11</td>   <td>41575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.ValidateDataFilteredorNot()[pri:2, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@37e547da]">ValidateDataFilteredorNot</td> 
-  <td>main@707976812</td>   <td></td> </tr>
-<tr bgcolor="6ab0da">  <td>19/09/16 20:06:32</td>   <td>62543</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@37e547da]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@707976812</td>   <td></td> </tr>
+<tr bgcolor="9ba3fb">  <td>19/09/17 17:54:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/17 17:54:51</td>   <td>19815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="9ba6c3">  <td>19/09/17 17:54:51</td>   <td>20067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.getSearchDetails(java.lang.String, java.lang.String)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">getSearchDetails</td> 
+  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/17 17:55:07</td>   <td>35733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.endReport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/17 17:55:08</td>   <td>37062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="9ba6c3">  <td>19/09/17 17:55:08</td>   <td>37067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.verifyPriceTextUpdate()[pri:1, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">verifyPriceTextUpdate</td> 
+  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/17 17:55:10</td>   <td>38548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.endReport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/17 17:55:10</td>   <td>38799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="9ba6c3">  <td>19/09/17 17:55:10</td>   <td>38800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.validateDataFilteredorNot()[pri:2, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">validateDataFilteredorNot</td> 
+  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/17 17:55:43</td>   <td>72049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.endReport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="9ba3fb">  <td>19/09/17 17:55:43</td>   <td>72221</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
 </table>
