--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9ba3fb">  <td>19/09/17 17:54:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="b794e2">  <td>19/09/17 17:54:51</td>   <td>19815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="9ba6c3">  <td>19/09/17 17:54:51</td>   <td>20067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.getSearchDetails(java.lang.String, java.lang.String)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">getSearchDetails</td> 
-  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="b794e2">  <td>19/09/17 17:55:07</td>   <td>35733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.endReport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="b794e2">  <td>19/09/17 17:55:08</td>   <td>37062</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="9ba6c3">  <td>19/09/17 17:55:08</td>   <td>37067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.verifyPriceTextUpdate()[pri:1, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">verifyPriceTextUpdate</td> 
-  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="b794e2">  <td>19/09/17 17:55:10</td>   <td>38548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.endReport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="b794e2">  <td>19/09/17 17:55:10</td>   <td>38799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&gt;&gt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="9ba6c3">  <td>19/09/17 17:55:10</td>   <td>38800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.validateDataFilteredorNot()[pri:2, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">validateDataFilteredorNot</td> 
-  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="b794e2">  <td>19/09/17 17:55:43</td>   <td>72049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.endReport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
-<tr bgcolor="9ba3fb">  <td>19/09/17 17:55:43</td>   <td>72221</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.close()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@6e75aa0d]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@315932542</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/18 17:55:53</td>   <td>0</td> <td title="&gt;&gt;ExtendReport.startreport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">&gt;&gt;startreport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="806884">  <td>19/09/18 17:55:54</td>   <td>1052</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="8bd765">  <td>19/09/18 17:56:30</td>   <td>36925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.searchHotel(java.lang.String, java.lang.String)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">searchHotel</td> 
+  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/18 17:56:38</td>   <td>45367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="8bd765">  <td>19/09/18 17:56:39</td>   <td>45999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.verifyPriceTextUpdate()[pri:1, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">verifyPriceTextUpdate</td> 
+  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/18 17:56:40</td>   <td>46577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="8bd765">  <td>19/09/18 17:56:40</td>   <td>46986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchAndFilter.validateDataFilteredorNot()[pri:2, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">validateDataFilteredorNot</td> 
+  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/18 17:57:41</td>   <td>107998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ExtendReport.tearDown(org.testng.ITestResult)[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
+<tr bgcolor="b794e2">  <td>19/09/18 17:57:41</td>   <td>108291</td> <td title="&lt;&lt;ExtendReport.endReport()[pri:0, instance:com.PhpTravelsHotelApplication.TestScript.SearchAndFilter@2aa3cd93]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1157726741</td>   <td></td> </tr>
 </table>
